<?xml version="1.0"?>
<package>
    <name>image_distortion</name>
    <version>0.0.0</version>
    <description>
        Image distortion experimentation
    </description>

    <maintainer email="andreu@beta-robots.com">Andreu Corominas-Murtra</maintainer>

    <license>MIT</license>

    <url type="website">https://gitlab.com/beta-robots/image_distortion</url>

    <author email="andreu@beta-robots.com">Andreu Corominas-Murtra</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>sensor_msgs</build_depend> 
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>runtime_msgs</run_depend> 
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>    

</package>
